tests/conformance/errors/nested_call_stack/input.dgm
fn c() {
  throw "err"
}

fn b() {
  c()
}

fn a() {
  b()
}

a()
